# amplifinder

./: .cursorrules  .envrc  .gitignore  DEVELOPER_GUIDE.md  LICENSE  PLAN.md  PYTHON_DESIGN.md  README.md  REMAINING_STEPS_PLAN.md  RENAMING_PLAN.md  amplifinder.yaml  base_config.yaml  compare_jc_alignment.py  compare_matlab_and_python_jc_alignment_plan.md  config.yaml  pyproject.toml  requirements.txt  run_status.csv  test_combine_hits.py  test_create_plot.py  todo.md
AmpliFinder_test/: AmpliFinder_wrapper.m  isolates.xlsx  pipeline.txt
AmpliFinder_test/scripts/: readIsolatesTable.m
amplifinder/: __init__.py  __main__.py  cli.py  config.py  env.py  exceptions.py  logger.py  optional_deps.py  pipeline.py
amplifinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amplifinder/core/: __init__.py
amplifinder/data/: __init__.py  isfinder.py
amplifinder/data_types/: __init__.py  basic_enums.py  enums.py  events.py  genome.py  jc_types.py  junction.py  junctions.py  read_types.py  record_types.py  record_types_schema.md  records.py  ref_tn.py  rudimentary_junctions.py  scaffold.py  schema.py  tabularable.py  tnjc2s.py  type_inference.py  typed_df.py  validate_and_cast_df.py
amplifinder/io/: __init__.py
amplifinder/models/: __init__.py
amplifinder/records/: base_records.py  typed_df.py  validate_and_cast_df.py
amplifinder/steps/: __init__.py  align_reads.py  analyze_alignments.py  base.py  calc_amplicon_coverage.py  calc_tnjc2_amplicon_coverage.py  classify_candidates.py  classify_structure.py  create_reference_junctions.py  create_tnjc.py  create_tnjc2.py  export.py  filter_candidates.py  get_reference.py  initialize.py  io_naming.py  link_tnjc2s_to_single_locus.py  locate_iss_genbank.py  locate_iss_isfinder.py  locate_tns.py  locate_tns_genbank.py  locate_tns_isfinder.py  pair_tnjc.py  plot_results.py  read_length.py  run_breseq.py  synthetic_junctions.py
amplifinder/tools/: __init__.py  blast.py  bowtie2.py  breseq.py  isescan.py
amplifinder/utils/: __init__.py  bam.py  coverage.py  dataclass_utils.py  fasta.py  file_lock.py  file_utils.py  flag_utils.py  genbank.py  json_utils.py  (+6 more)
docs/: CONFIGURATION.md  configuration.md  matlab_xlsx_summary.md  pipeline.md
examples/: batch_run.sh  create_config_example.sh  logger_color_examples.py  params_example.yaml  rerun_example.yaml
packaging_dir/: AmpliFinder.m  IS_side.m  IS_super.m  ISfinder.m  JC_fields.csv  MOB_fields.csv  UN_fields.csv  analyze_fastq_files.m  assign_potential_ISs.m  bamAnalysis.m  blast2ISloc.m  bowtie2_alignment.m  breseq2mat.m  calc_average_coverage.m  calc_coverage_ISJC2.m  calculate_amplicon_length.m  classify_ISJC2.m  classify_candidates.m  combine_ISJC_pairs.m  concatenateTableFiles.m  config.txt  count_lines.m  count_lines_and_read_length.m  count_reads.m  create_IS_end_seqs.m  create_JC_of_reference_IS.m  create_isolate_ISloc.m  create_isolate_genome.m  curate_candidate_amplicons.m  curate_reference.m  directed_IS.m  efetch_genbank.m  export_ISJC2.m  export_filteredISJC2.m  findISinRef.m  getMappedBases.m  getReadLength.m  get_breseq_ver.m  get_coverage_in_range.m  get_fasta.m  (+17 more)
runner/: README.md  example_runs.csv  run_amplifinder_batch.py
scripts/: activate_conda.sh  run_pipeline.py  summarize_matlab_xlsx.py
tests/: __init__.py  conftest.py  env.py  test_cli_preflight.py
(+99 files in other folders)
