[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifinder"
version = "1.0.0"
description = "Detect IS-mediated gene amplifications from WGS data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kishony Lab"}]
keywords = ["bioinformatics", "genomics", "amplification", "IS-elements"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "pyarrow>=14.0.0",
    "pydantic>=2.0",
    "biopython>=1.79",
    "pysam>=0.19",
    "openpyxl>=3.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "matplotlib>=3.7",
    "rich>=13.0",
    "filelock>=3.12",
    "line_profiler>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "integration: integration tests using real data",
    "slow: slow tests (e.g., runs breseq)",
]
filterwarnings = [
    "ignore::DeprecationWarning:line_profiler.*",
]

[project.scripts]
amplifinder = "amplifinder.cli:main"

[project.urls]
Homepage = "https://github.com/kishonylab/amplifinder"

[tool.setuptools.packages.find]
where = ["."]
include = ["amplifinder*"]

[tool.setuptools.package-data]
"amplifinder.data" = ["ISfinderDB/*"]

